--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1",
-    "nodemon": "^1.19.1"
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.6.2",
+    "morgan": "~1.9.1"
   }
 }
